mf6_sources = files(
    '..' / '..' / '..' / 'src' / 'Utilities' / 'Memory' / 'Memory.F90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'Memory' / 'MemoryContainerIterator.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'Memory' / 'MemoryHelper.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'Memory' / 'MemoryManager.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'Memory' / 'MemoryStore.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'TimeSeries' / 'TimeSeries.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'TimeSeries' / 'TimeSeriesRecord.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'ArrayHandlers.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'BlockParser.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'CharString.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'Constants.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'SimVariables.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'compilerversion.F90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'Message.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'ErrorUtil.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'GeomUtil.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'InputOutput.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'Iterator.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'Sim.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'KeyValueList.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'KeyValueListIterator.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'KeyValueNode.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'kind.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'List.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'ListIterator.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'ListNode.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'LongLineReader.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'MathUtil.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'OpenSpec.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'PtrHashTable.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'PtrHashTableIterator.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'defmacro.F90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'version.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'Table.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'TableTerm.f90',
    '..' / '..' / '..' / 'src' / 'Utilities' / 'DevFeature.f90',
)


mf5to6_sources = files(
    'LGR' / 'GwfLgrModule.f',
    'LGR' / 'GwfLgrSubs.f',
    'LGR' / 'GwfSfrSubs.f',
    'MF2005' / 'de47.f',
    'MF2005' / 'gmg7.f',
    'MF2005' / 'gwf2mnw17.f',
    'MF2005' / 'gwf2mnw2i7.f',
    'MF2005' / 'GwfBasModule.f90',
    'MF2005' / 'GwfBasOcSubs.f',
    'MF2005' / 'GwfBasSubs.f',
    'MF2005' / 'GwfBcfModule.f',
    'MF2005' / 'GwfBcfSubs.f',
    'MF2005' / 'GwfChdModule.f90',
    'MF2005' / 'GwfChdSubs.f',
    'MF2005' / 'GwfDrnModule.f',
    'MF2005' / 'GwfDrnSubs.f',
    'MF2005' / 'GwfEtsModule.f',
    'MF2005' / 'GwfEtsSubs.f',
    'MF2005' / 'GwfEvtModule.f',
    'MF2005' / 'GwfEvtSubs.f',
    'MF2005' / 'GwfFhbModule.f90',
    'MF2005' / 'GwfFhbSubs.f90',
    'MF2005' / 'GwfGhbModule.f',
    'MF2005' / 'GwfGhbSubs.f',
    'MF2005' / 'GwfLakModule.f90',
    'MF2005' / 'GwfLakSubs.f',
    'MF2005' / 'GwfLpfModule.f',
    'MF2005' / 'GwfLpfSubs.f',
    'MF2005' / 'GwfMnwModule.f',
    'MF2005' / 'GwfMnwSubs.f',    
    'MF2005' / 'GwfRchModule.f',
    'MF2005' / 'GwfRchSubs.f',
    'MF2005' / 'GwfResModule.f',
    'MF2005' / 'GwfResSubs.f',
    'MF2005' / 'GwfRivModule.f',
    'MF2005' / 'GwfRivSubs.f',
    'MF2005' / 'GwfSfrCheck.f',
    'MF2005' / 'GwfSfrModule.f',
    'MF2005' / 'GwfWelModule.f90',
    'MF2005' / 'obs2bas7.f',
    'MF2005' / 'obs2chd7.f',
    'MF2005' / 'obs2drn7.f',
    'MF2005' / 'obs2ghb7.f',
    'MF2005' / 'obs2riv7.f',
    'MF2005' / 'parutl7.f',
    'MF2005' / 'pcg7.f',
    'MF2005' / 'pcgn2.f90',
    'MF2005' / 'precutls.f90',
    'MF2005' / 'sip7.f',
    'MF2005' / 'utl7.f',
    'NWT' / 'gwf2hfb7_NWT.f',
    'NWT' / 'gwf2wel7_NWT.f',
    'NWT' / 'GwfHfbSubs_NWT.f90',
    'NWT' / 'GwfUpwModule.f90',
    'NWT' / 'GwfUpwSubs.f90',
    'NWT' / 'GwfUzfModule_NWT.f',
    'NWT' / 'GwfUzfSubs_NWT.f',
    'NWT' / 'NWT1_gmres.f90',
    'NWT' / 'NWT1_ilupc_mod.f90',
    'NWT' / 'NWT1_module.f',
    'NWT' / 'NWT1_solver.f',
    'NWT' / 'NWT1_xmd.f',
    'NWT' / 'NWT1_xmdlib.f',
    'Preproc' / 'ConstantsPHMF.f90',
    'Preproc' / 'Discretization3D.f90',
    'Preproc' / 'DiscretizationBasePHMF.f90',
    'Preproc' / 'File.f90',
    'Preproc' / 'FileList.f90',
    'Preproc' / 'Global.f90',
    'Preproc' / 'GlobalPHMF.f90',
    'Preproc' / 'GlobalVariables.f90',
    'Preproc' / 'GlobalVariablesPHMF.f90',
    'Preproc' / 'ObsBlock.f90',
    'Preproc' / 'ObservePHMF.f90',
    'Preproc' / 'Preproc.f90',
    'Preproc' / 'SimListVariables.f90',
    'Preproc' / 'SimPHMF.f90',
    'Preproc' / 'SimVariablesPHMF.f90',
    'Preproc' / 'Utilities.f90',
    'ArrayReadersMF5.f90',
    'Auxiliary.f90',
    'CharacterContainer.f90',
    'ChdObsWriter.f90',
    'ChdPackageWriter.f90',
    'ChdType.f90',
    'Connection.f90',
    'ConverterCommon.f90',
    'DisWriter.f90',
    'DrnObsWriter.f90',
    'DrnPackageWriter.f90',
    'EvtPackageWriter.f90',
    'Exchange.f90',
    'ExchangeWriter.f90',
    'FhbPackageWriter.f90',
    'FileWriter.f90',
    'GhbObsWriter.f90',
    'GhbPackageWriter.f90',
    'HfbPackageWriter.f90',
    'IcWriter.f90',
    'ImsPackageWriter.f90',
    'Lake.f90',
    'LakeConnection.f90',
    'LakeOutlet.f90',
    'LakeTributary.f90',
    'LakPackageWriter.f90',
    'LineList.f90',
    'mach_mod.f90',
    'MawPackageWriter.f90',
    'mf5to6.f90',
    'Model.f90',
    'ModelConverter.f90',
    'ModelPackage.f90',
    'Mover.f90',
    'MultiLayerObsModule.f90',
    'MvrPackageWriter.f90',
    'NpfWriter.f90',
    'ObsWriter.f90',
    'OutputControlWriter.f90',
    'PackageWriter.f90',
    'ParamModule.f90',
    'RchPackageWriter.f90',
    'RivObsWriter.f90',
    'RivPackageWriter.f90',
    'SfrDiversion.f90',
    'SfrPackageWriter.f90',
    'SfrReach.f90',
    'SfrSegment.f90',
    'SimFileWriter.f90',
    'StoWriter.f90',
    'StressPeriod.f90',
    'TdisVariables.f90',
    'TdisWriter.f90',
    'UzfPackageWriter.f90',
    'WelPackageWriter.f90',
)

mf6convname = meson.project_name()
message('MODFLOW 5 to 6 converter name:', mf6convname)

executable(mf6convname,
            [mf6_sources, mf5to6_sources],
            install: true,)
